syntax = "proto3";

package mmg.userparty;
option csharp_namespace = "Contracts.UserParty";

import "google/protobuf/wrappers.proto";

message UserPartySlotPb {
  int32 slot_id = 1;
  google.protobuf.Int32Value user_character_id = 2; // null=해제
}

message UserPartyPb {
  int64 party_id  = 1;
  int32 user_id   = 2;
  int32 battle_id = 3;
  repeated UserPartySlotPb slots = 4; 
}

message CreateUserPartyRequestPb {
  int32 user_id    = 1;
  int32 battle_id  = 2;
  int32 slot_count = 3;
}
message CreateUserPartyResponsePb {
  int64 party_id = 1;
}

message GetUserPartyByIdRequestPb {
  int64 party_id = 1;
}
message GetUserPartyResponsePb {
  UserPartyPb party = 1;  
}

message GetUserPartyByUserBattleRequestPb {
  int32 user_id   = 1;
  int32 battle_id = 2;
}

message AssignCharacterRequestPb {
  int64 party_id         = 1;
  int32 slot_id          = 2;
  int32 user_character_id = 3;
}
message AssignCharacterResponsePb {}

message UnassignCharacterRequestPb {
  int64 party_id = 1;
  int32 slot_id  = 2;
}
message UnassignCharacterResponsePb {}

message SwapSlotsRequestPb {
  int64 party_id = 1;
  int32 slot_a   = 2;
  int32 slot_b   = 3;
}
message SwapSlotsResponsePb {}

message BulkAssignRequestPb {
  int64 party_id = 1;
  repeated AssignPair pairs = 2;
  message AssignPair {
    int32 slot_id = 1;
    google.protobuf.Int32Value user_character_id = 2; // null=해제
  }
}
message BulkAssignResponsePb {}
